// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumbs > click on middle item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__qxa0fl0"
      >
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles_clickable_true__1yxbbx45 styles__1yxbbx47"
        >
          <button
            class="styles__1yxbbx43 styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 2
          </button>
        </li>
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <div
            class="styles__1yxbbx43 styles__1yxbbx46 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > last item should no be clickable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__qxa0fl0"
      >
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles_clickable_true__1yxbbx45 styles__1yxbbx47"
        >
          <button
            class="styles__1yxbbx43 styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__qxa0fl0"
      >
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <div
            class="styles__1yxbbx43 styles__1yxbbx46 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with invalid child 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__qxa0fl0"
      >
        Invalid child
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with minWidth and maxWidth 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__qxa0fl0"
      >
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
          style="--_1yxbbx41: 100px; --_1yxbbx40: 200px;"
        >
          <a
            class="styles__1yxbbx42 styles__1dtqm9e0 styles_prominence_stronger__1dtqm9e5 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodySmallStrong__1dtqm9ea styles_type_standalone__1dtqm9ed styles_undefined_compound_6__1dtqm9ek styles__1dtqm9en"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          class="styles__1yxbbx44 styles__1yxbbx47"
        >
          <div
            class="styles__1yxbbx43 styles__1yxbbx46 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
